--- a/learn.html
+++ b/learn.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class = “content”>
-<p> Have you ever wondered about the complex system of money? Money in its simplest form is a medium to trade for goods such as a computer or a tv or even a house, but it has more confusing subelements. From gross income (money before taxes) and net income (money after taxes), to monthly bills, taxes themselves, to investing and saving; all this can seem a bit confusing at first. However, we can break this down a little bit.</p>
+<p> Have you ever wondered about the complex system of money? <strong> Money </strong> in its simplest form is a medium to trade for goods such as a computer or a tv or even a house, but it has more confusing subelements. From gross income (money before taxes) and net income (money after taxes), to monthly bills, taxes themselves, to investing and saving; all this can seem a bit confusing at first. However, we can break this down a little bit.</p>
 
 <p>  We already know that money is a direct way that goods are traded in modern society, so whats the purpose of taxes?</p>
 
@@ -39,9 +39,9 @@
 </div>
 
 <div class = “content”>
-		<p> Enter short summary </p>
+		<p> Understanding the usage of money is only part of the story; understanding how to manage and save money is the missing half of our chronicle. </p>
 <!-- Summary here is optional, only if it fits in -->
-		<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+		<p> Saving money is essential whether you want to retire with plenty of money, or save for a new home, and saving money is something you have to start at a relatively young age. This is due to something called interest (amount of extra money accumulated over time typically calculated in percentages), and you can get interest by investing in credit unions, government bonds, or savings accounts. <strong> Credit unions </strong> are non-profit, member-owned institutions that allow for deposits and sends out loans and give profits back to members by giving higher saving rates and give lower interest rates for taking out money. <strong> Government bonds </strong> are essentially giving money to the government, with the government's promise of return along with some interest.<strong> Savings accounts </strong> are accounts that hold your money and give you compound interest. <strong>Compound interest<strong> is interest stacking on interest, such as if you have $100 now, next year you may have $105, but after that, next year you may gain $110.25. In simple terms, all these methods are just letting you gain money over time due to interest, in turn for your participation or some of your money in the present moment. Over time you gain more and more money passively, and then you have to worry about managing that money. A general rule of thumb for<strong> managing money</strong> is 50% for needs, 30% for wants, and roughly 20% for investments/emergency funds.</p>
 <!-- //Try to fit this on the right side along with the title, also make it a bit lower than the other Content textbox.  -->
 
 </div>
