--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="=widthdevice, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PiggyBank Project</title>
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -32,7 +32,7 @@
         
         <p class = "desc" id = "third"> Mario is an adaptable and creative high-school coder with experience from ASC (All Star Code) and is a back-end coder of Piggybank ensuring functionality and a good user experience. </p>
 
-        <p class = "desc" id = "fourth"> Somkene is rising freshman and a "outside the box" coder with experience from ASC (All Star Code) and is a back-end coder of Piggybank ensuring a correct and well ran code. </p>
+        <p class = "desc" id = "fourth"> Somkene is a rising freshman and a "outside the box" coder with experience from ASC (All Star Code) and is a back-end coder of Piggybank ensuring a correct and well ran code. </p>
     </div>
     
     <div id = "plan">
