--- a/quiz.html
+++ b/quiz.html
@@ -78,33 +78,33 @@
     <div class="question">
         <h2 id="question_Number">Question #7: What are credit unions?</h2>
         <button class="choice" id="button7A">A. A group of credit card companies</button>
-        <button class="choice" id="button7B">B. Banks </button>
+        <button class="choice" id="button7B">B. Banks that earn profits from interest rate loans</button>
         <button class="choice" id="button7C">C. Non-profits that give loans to members for low interest rates to meet their needs</button>
-        <button class="choice" id="button7D">D. blah blah blah</button>  
+        <button class="choice" id="button7D">D. A website that tracks your credit scores</button>  
     </div>
 
     <div class="question">
-        <h2 id="question_Number">Question #8: What are saving?</h2>
-        <button class="choice" id="button8A">A. blah blah blah</button>
-        <button class="choice" id="button8B">B. blah blah blah</button>
-        <button class="choice" id="button8C">C. blah blah blah</button>
-        <button class="choice" id="button8D">D. blah blah blah</button>  
+        <h2 id="question_Number">Question #8: What is a savings account?</h2>
+        <button class="choice" id="button8A">A. A bank account that you use for daily transactions</button>
+        <button class="choice" id="button8B">B. A secure and safe long-term account that people use to save towards a financial goal</button>
+        <button class="choice" id="button8C">C. A type of 401k that the government cannot tax</button>
+        <button class="choice" id="button8D">D. I don't know!</button>  
     </div>
 
     <div class="question">
-        <h2 id="question_Number">Question #9: How much does the government tax?</h2>
-        <button class="choice" id="button9A">A. blah blah blah</button>
-        <button class="choice" id="button9B">B. blah blah blah</button>
-        <button class="choice" id="button9C">C. blah blah blah</button>
-        <button class="choice" id="button9D">D. blah blah blah</button>  
+        <h2 id="question_Number">Question #9: How much does the government tax on income?</h2>
+        <button class="choice" id="button9A">A. 15% for everyone</button>
+        <button class="choice" id="button9B">B. 45% if you make over $400k, otherwise 25%</button>
+        <button class="choice" id="button9C">C. 30% if you live in New York, and 20% everywhere else</button>
+        <button class="choice" id="button9D">D. That depends on your income and state of residency</button>  
     </div>
 
     <div class="question">
         <h2 id="question_Number">Question #10: Why is interest a good thing?</h2>
-        <button class="choice" id="button10A">A. blah blah blah</button>
-        <button class="choice" id="button10B">B. blah blah blah</button>
-        <button class="choice" id="button10C">C. blah blah blah</button>
-        <button class="choice" id="button10D">D. blah blah blah</button>  
+        <button class="choice" id="button10A">A. Provides a source of passive income and allows your account balance to grow exponentially</button>
+        <button class="choice" id="button10B">B. Gives certification to your company so that investors can loan money safely</button>
+        <button class="choice" id="button10C">C. Provides banks with more money so that they can give larger loans</button>
+        <button class="choice" id="button10D">D. Trick question! It's actually a bad thing.</button>  
     </div>
 
     <div id="submit_button_div">
