--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class = main>
         <h1 id = "intro"> Introduction </h1>
-        <p id = "shortSum"> PiggyBank is a finanical literacy website app that helps test and improve upon the financial management skills of teens and adults. We provide a place to learn more about the basics of money and a quiz to polish up the knowledge of our users.</p>
+        <p id = "shortSum"> PiggyBank is a financial literacy website app that helps test and improve upon the financial management skills of teens and adults. We provide a place to learn more about the basics of money and a quiz to polish up the knowledge of our users.</p>
         <div class="image_div">
             <img id="homeImage" src="images/mainpage.png">
         </div>
