--- a/quiz.html
+++ b/quiz.html
@@ -19,13 +19,13 @@
     </div>
     <div id = "Test"></div>
     <!-- set, get, parse, stringify -->
-    <h1 id="intro"> Test your knowledge here!!!</h1>
+    <h1 id="intros"> <strong> Test your knowledge here!!! </strong> </h1>
     <label for="name">Enter Name Here:</label> 
     <input type="text" id="name_input" placeholder="Ex: Jonathan">
     
     <div class="question">
         <h2 id="question_Number">Question #1: What is money?</h2>
-        <button class="choice" id="button1A">A. A medium of economic exahcnge/currency</button>
+        <button class="choice" id="button1A">A. A medium of economic exchange/currency</button>
         <button class="choice" id="button1B">B. Credit Cards</button>
         <button class="choice" id="button1C">C. Cash/Coins</button>
         <button class="choice" id="button1D">D. All of the above</button>  
@@ -88,7 +88,7 @@
         <button class="choice" id="button8A">A. A bank account that you use for daily transactions</button>
         <button class="choice" id="button8B">B. A secure and safe long-term account that people use to save towards a financial goal</button>
         <button class="choice" id="button8C">C. A type of 401k that the government cannot tax</button>
-        <button class="choice" id="button8D">D. I don't know!</button>  
+        <button class="choice" id="button8D">D. An account where you save other accounts</button>  
     </div>
 
     <div class="question">
