--- a/results.html
+++ b/results.html
@@ -20,10 +20,13 @@
     </div>
 
     <div>
-        <h1 id="intro">Your Results:</h1>
+        <h1 id="intros">Your Results:</h1>
     </div>
 
     <div id="submissions_container"></div>
-
+    
+    <div class="clear_button_div">
+        <button id="clear_button">Clear</button>
+    </div>
 </body>
 </html>
