--- a/learn.html
+++ b/learn.html
@@ -8,44 +8,39 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <div class = "header"> 
-        <img id="logo_Image" src = "images/icon.png">
-        <h1 id="title"> PiggyBank </h1>
-        <a id = "home" href="index.html"><h1>Home</h1></a>
-        <a id = "about" href="about.html"><h1>About</h1></a>
-        <a id = "learn" href="learn.html"><h1>Learn</h1></a>
-        <a id = "quiz" href="quiz.html"><h1>Quiz</h1></a>
-        <a id = "results" href="results.html"><h1>Results</h1></a>
+    <div class="header"> 
+        <img id="logo_Image" src="images/icon.png">
+        <h1 id="title">PiggyBank</h1>
+        <a id="home" href="index.html"><h1>Home</h1></a>
+        <a id="about" href="about.html"><h1>About</h1></a>
+        <a id="learn" href="learn.html"><h1>Learn</h1></a>
+        <a id="quiz" href="quiz.html"><h1>Quiz</h1></a>
+        <a id="results" href="results.html"><h1>Results</h1></a>
     </div>
 
-    <div id = “main-div”>
+    <div id="main-div">
 
-<div class = “article”> 
-<h2> 1.1. About Money: Common Usage and Functionality.</h2>
-</div>
+        <div class="article"> 
+            <h2>1.1. About Money: Common Usage and Functionality.</h2>
+        </div>
 
-<div class = “content”>
-<p> Have you ever wondered about the complex system of money? <strong> Money </strong> in its simplest form is a medium to trade for goods such as a computer or a tv or even a house, but it has more confusing subelements. From gross income (money before taxes) and net income (money after taxes and other deductions), to monthly bills, taxes themselves, to investing and saving; all this can seem a bit confusing at first. However, we can break this down a little bit.</p>
+        <div class="content">
+            <p id = "largeSum">Have you ever wondered about the complex system of <strong>money</strong>? Money in its simplest form is a medium to trade for goods such as a computer, a TV, or even a house, but it has more confusing subelements. From <strong>gross income</strong> (money before taxes) and <strong>net income</strong> (money after taxes and other deductions), to monthly bills, taxes themselves, to investing and saving — all this can seem a bit confusing at first. However, we can break this down a little bit.</p>
 
-<p>  We already know that money is a direct way that goods are traded in modern society, so whats the purpose of taxes?</p>
+            <p id="smallSum"> We already know that money is a direct way that goods are traded in modern society, so what's the purpose of <strong>taxes</strong>?<strong> <br> <br> Taxes</strong> are mandatory payments to the government to fund government agencies and all parts of our society — as well as even yourself (especially when you're older). Your taxes are used to contribute to Social Security (retirement and aid), National Defense, Medicare, and other agencies. These taxes are used typically when you start gaining <strong>income</strong> (money gained regularly from jobs or investments). Though money is just used for the exchange of produced goods and entertainment, taxes are essential to this process as they are similar to an investment in society and help keep everything running while assisting those later on in life.</p>
+        </div> 
 
-    <p><strong>Taxes </strong> are mandatory payments to the government to fund government agencies to fund all parts of our society as well as even yourself (especially when your older). Your taxes are used to contribute to Social Security (retirement and aid), National Defense, Medicare, and other agencies. These taxes are used typically when you start gaining income (money gained regularly from jobs or investments). Though money is just used for the exchange of produced goods and entertainment, taxes are essential to this process as they are similar to an investment in society and helps keep everything running as well as assisting those later on in life.</p>
-    <!-- //Try to fit this on the left side -->
- </div>
+        <div class="article">
+            <h2>1.2. Money Management Methods and How to Save.</h2>
+        </div>
 
+        <div class="content">
+            <p id = "largeSum">Understanding the usage of money is only part of the story; understanding how to <strong>manage</strong> and <strong>save</strong> money is the missing half of our chronicle.</p>
 
-<div class = “article”>
-		<h2> 1.2. Money Management Methods and How to Save. </h2>
-</div>
+            <p id="smallSum">Saving money is essential whether you want to retire with plenty of money, or save for a new home, and saving money is something you have to start at a relatively young age. This is due to something called <strong>interest</strong> (amount of extra money accumulated over time, typically calculated in percentages). You can get interest by investing in <strong>credit unions</strong>, <strong>government bonds</strong>, or <strong>savings accounts</strong>.<br><br><strong>Credit unions</strong> are non-profit, member-owned institutions that allow for deposits, send out loans, and give profits back to members by offering higher saving rates and lower interest rates for borrowing money. <strong>Government bonds</strong> are essentially giving money to the government, with the government's promise of return along with some interest. <strong>Savings accounts</strong> are accounts that hold your money and give you <b>compound interest</b>. Compound interest is interest stacking on interest — for example, if you have $100 now, next year you may have $105, but the year after that you may gain $110.25. In simple terms, all these methods are just letting you gain money over time due to interest, in turn for your participation or some of your money in the present moment.<br><br>Over time, you gain more and more money passively, and then you have to worry about managing that money. A general rule of thumb for <strong>managing money</strong> is 50% for needs, 30% for wants, and roughly 20% for investments/emergency funds.</p>
+        </div>
 
-<div class = “content”>
-		<p> Understanding the usage of money is only part of the story; understanding how to manage and save money is the missing half of our chronicle. </p>
-<!-- Summary here is optional, only if it fits in -->
-		<p> Saving money is essential whether you want to retire with plenty of money, or save for a new home, and saving money is something you have to start at a relatively young age. This is due to something called interest (amount of extra money accumulated over time typically calculated in percentages), and you can get interest by investing in credit unions, government bonds, or savings accounts. <strong> Credit unions </strong> are non-profit, member-owned institutions that allow for deposits and sends out loans and give profits back to members by giving higher saving rates and give lower interest rates for taking out money. <strong> Government bonds </strong> are essentially giving money to the government, with the government's promise of return along with some interest.<strong> Savings accounts </strong> are accounts that hold your money and give you compound interest. <b>Compound interest</b> is interest stacking on interest, such as if you have $100 now, next year you may have $105, but after that, next year you may gain $110.25. In simple terms, all these methods are just letting you gain money over time due to interest, in turn for your participation or some of your money in the present moment. Over time you gain more and more money passively, and then you have to worry about managing that money. A general rule of thumb for<strong> managing money</strong> is 50% for needs, 30% for wants, and roughly 20% for investments/emergency funds.</p>
-<!-- //Try to fit this on the right side along with the title, also make it a bit lower than the other Content textbox.  -->
+    </div>
 
-</div>
-
-</div>
 </body>
 </html>
